[package]
name = "ansify"
version = "0.1.0"
edition = "2021"

[lib]
name = "ansify"
path = "src/ansify/ansify.rs"

[[bin]]
name = "ansify-cli"
path = "src/ansify-cli/main.rs"
required-features = ["cli"]

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.0.29", features = ["derive"], optional = true }
env_logger = "0.10.0"
image = "0.23"
kd-tree = { version = "0.5.0" }
log = "0.4.17"
nokhwa = { version = "0.9.4", features = ["input-msmf"], optional = true }
rayon = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
show-image = { version = "0.10.1", features = ["image", "save"], optional = true }

[features]
rayon = ["kd-tree/rayon"]
cli = ["dep:clap", "dep:nokhwa", "dep:show-image"]
