[package]
name = "ansify"
version = "0.1.0"
authors = ["widberg"]
edition = "2021"
license = "MIT"
description = "ansify stuff"
repository = "https://github.com/widberg/ansify"

[workspace]
members = [
    "ansify-cli",
    "ansify-obs"
]

[dependencies]
ansi_term = "0.12.1"
env_logger = "0.10.0"
image = "0.23"
kd-tree = { version = "0.5.0" }
log = "0.4.17"
rayon = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[features]
rayon = ["kd-tree/rayon"]
