[package]
name = "ansify-cli"
version = "0.1.0"
authors = ["widberg"]
edition = "2021"
description = "ansify"
license = "MIT"
repository = "https://github.com/widberg/ansify"

[dependencies]
ansify = { path = "../", version = "*" }
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.11.8"
image = "0.25.6"
log = "0.4.17"
nokhwa = { version = "0.10.7", features = ["input-msmf"] }
show-image = { version = "0.14.1", features = ["image", "save"] }
