[package]
name = "ansify-obs"
version = "0.1.0"
authors = ["widberg"]
edition = "2021"
description = "ansify"
license = "MIT"
repository = "https://github.com/widberg/ansify"

[dependencies]
ansify = { path = "../", version = "*" }
image = "0.23"
log = "0.4.17"
obs-wrapper = { path = "../../rust-obs-plugins/", version = "*" }

[lib]
name = "ansify_obs"
crate-type = ["cdylib"]
